@@ -74,4 +74,5 @@ importFrom(stats,qnbinom)
 importFrom(stats,qnorm)
 importFrom(stats,qpois)
 importFrom(stats,qweibull)
+importFrom(stats,uniroot)
 importFrom(utils,head)
